--- a/res/layout/tracking.xml
+++ b/res/layout/tracking.xml
@@ -7,13 +7,12 @@
 <TextView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="@string/hello_world"
+    android:text="@string/tracking_title"
     />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/button_track"
-    android:onClick="onTrackClicked"
+    android:text="@string/button_cancel"
+    android:onClick="onCancelClicked"
     />
 </LinearLayout>
-
