Add landscape orientation layout for tracking activity

--- a/app/src/main/res/layout/tracking_portrait.xml
+++ b/app/src/main/res/layout/tracking_portrait.xml
@@ -2,46 +2,51 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         >
         <Button
             android:id="@+id/button_record"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/button_record"
             android:onClick="onRecordClicked"
             />
 
         <Button
             android:id="@+id/button_pause"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/button_pause"
             android:onClick="onPauseClicked"
             />
 
         <Button
             android:id="@+id/button_stop"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/button_stop"
             android:onClick="onStopClicked"
             />
 
         <Button
             android:id="@+id/button_cancel"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/button_cancel"
             android:onClick="onCancelClicked"
             />
@@ -49,12 +54,13 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
+        android:divider="@android:drawable/divider_horizontal_dim_dark"
         >
         <ImageView
             android:layout_width="wrap_content"
@@ -64,7 +70,7 @@
             android:paddingLeft="8dp"
             />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
@@ -73,7 +79,7 @@
             >
             <TextView
                 android:id="@+id/tracking_latitude_label"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -82,7 +88,7 @@
                 />
             <TextView
                 android:id="@+id/tracking_latitude"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -91,7 +97,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
@@ -106,7 +112,7 @@
             android:paddingLeft="8dp"
             />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
@@ -115,7 +121,7 @@
             >
             <TextView
                 android:id="@+id/tracking_longitude_label"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -124,7 +130,7 @@
                 />
             <TextView
                 android:id="@+id/tracking_longitude"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -133,7 +139,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
@@ -148,7 +154,7 @@
             android:paddingLeft="8dp"
             />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
@@ -157,7 +163,7 @@
             >
             <TextView
                 android:id="@+id/tracking_speed_label"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -166,7 +172,7 @@
                 />
             <TextView
                 android:id="@+id/tracking_speed"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -175,7 +181,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
@@ -190,7 +196,7 @@
             android:paddingLeft="8dp"
             />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
@@ -199,7 +205,7 @@
             >
             <TextView
                 android:id="@+id/tracking_bearing_label"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -208,7 +214,7 @@
                 />
             <TextView
                 android:id="@+id/tracking_bearing"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -217,7 +223,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
@@ -232,7 +238,7 @@
             android:paddingLeft="8dp"
             />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
@@ -241,7 +247,7 @@
             >
             <TextView
                 android:id="@+id/tracking_accuracy_label"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
@@ -250,7 +256,7 @@
                 />
             <TextView
                 android:id="@+id/tracking_accuracy"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
