--- a/app/src/main/res/layout/tracking_portrait.xml
+++ b/app/src/main/res/layout/tracking_portrait.xml
@@ -78,6 +78,49 @@
             android:paddingLeft="8dp"
             >
             <TextView
+                android:id="@+id/tracking_timestamp_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="5dip"
+                android:text="@string/tracking_timestamp_label"
+                android:textSize="20sp"
+                />
+            <TextView
+                android:id="@+id/tracking_timestamp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="5dip"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:divider="@android:drawable/divider_horizontal_dim_dark"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@android:drawable/title_bar_tall"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            >
+            <TextView
                 android:id="@+id/tracking_latitude_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
