--- a/app/src/main/res/layout/tracking_landscape.xml
+++ b/app/src/main/res/layout/tracking_landscape.xml
@@ -206,6 +206,48 @@
                 android:paddingLeft="8dp"
                 >
                 <TextView
+                    android:id="@+id/tracking_altitude_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dip"
+                    android:layout_marginRight="5dip"
+                    android:text="@string/tracking_altitude_label"
+                    android:textSize="20sp"
+                    />
+                <TextView
+                    android:id="@+id/tracking_altitude"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dip"
+                    android:layout_marginRight="5dip"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@android:drawable/title_bar_tall"
+                android:paddingTop="8dp"
+                android:paddingLeft="8dp"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_vertical"
+                android:paddingTop="8dp"
+                android:paddingLeft="8dp"
+                >
+                <TextView
                     android:id="@+id/tracking_speed_label"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
