--- a/app/src/main/res/layout/activity_finishing.xml
+++ b/app/src/main/res/layout/activity_finishing.xml
@@ -44,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
+                android:prompt="@string/finishing_objective_prompt"
                 />
         </LinearLayout>
     </LinearLayout>
