--- a/app/src/main/res/layout/activity_finishing.xml
+++ b/app/src/main/res/layout/activity_finishing.xml
@@ -78,11 +78,95 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="5dip"
+                android:text="@string/finishing_elapsed_time_label"
+                android:textSize="20sp"
+                />
+            <TextView
+                android:id="@+id/finishing_elapsed_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="5dip"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:divider="@android:drawable/divider_horizontal_dim_dark"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@android:drawable/title_bar_tall"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="5dip"
                 android:text="@string/finishing_distance_label"
                 android:textSize="20sp"
                 />
             <TextView
                 android:id="@+id/finishing_distance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="5dip"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:divider="@android:drawable/divider_horizontal_dim_dark"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@android:drawable/title_bar_tall"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="5dip"
+                android:text="@string/finishing_average_speed_label"
+                android:textSize="20sp"
+                />
+            <TextView
+                android:id="@+id/finishing_average_speed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
