--- a/app/src/main/res/layout/tracking_landscape.xml
+++ b/app/src/main/res/layout/tracking_landscape.xml
@@ -1,354 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_gravity="center_vertical"
-        android:paddingTop="8dp"
-        android:paddingLeft="8dp"
-        >
-        <Button
-            android:id="@+id/button_record"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/button_record"
-            android:onClick="onRecordClicked"
-            />
-
-        <Button
-            android:id="@+id/button_pause"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/button_pause"
-            android:onClick="onPauseClicked"
-            />
-
-        <Button
-            android:id="@+id/button_stop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/button_stop"
-            android:onClick="onStopClicked"
-            />
-
-        <Button
-            android:id="@+id/button_cancel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/button_cancel"
-            android:onClick="onCancelClicked"
-            />
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
-        >
+        android:paddingRight="8dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            android:divider="@android:drawable/divider_horizontal_dim_dark"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@android:drawable/title_bar_tall"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                >
-                <TextView
-                    android:id="@+id/tracking_timestamp_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    android:text="@string/tracking_timestamp_label"
-                    android:textSize="20sp"
-                    />
-                <TextView
-                    android:id="@+id/tracking_timestamp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    />
-            </LinearLayout>
-        </LinearLayout>
+        <include layout="@layout/tracking_buttons" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            android:divider="@android:drawable/divider_horizontal_dim_dark"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@android:drawable/title_bar_tall"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                >
-                <TextView
-                    android:id="@+id/tracking_latitude_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    android:text="@string/tracking_latitude_label"
-                    android:textSize="20sp"
-                    />
-                <TextView
-                    android:id="@+id/tracking_latitude"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    />
-            </LinearLayout>
-        </LinearLayout>
+    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@android:drawable/title_bar_tall"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                >
-                <TextView
-                    android:id="@+id/tracking_longitude_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    android:text="@string/tracking_longitude_label"
-                    android:textSize="20sp"
-                    />
-                <TextView
-                    android:id="@+id/tracking_longitude"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@android:drawable/title_bar_tall"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                >
-                <TextView
-                    android:id="@+id/tracking_altitude_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    android:text="@string/tracking_altitude_label"
-                    android:textSize="20sp"
-                    />
-                <TextView
-                    android:id="@+id/tracking_altitude"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@android:drawable/title_bar_tall"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                >
-                <TextView
-                    android:id="@+id/tracking_speed_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    android:text="@string/tracking_speed_label"
-                    android:textSize="20sp"
-                    />
-                <TextView
-                    android:id="@+id/tracking_speed"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@android:drawable/title_bar_tall"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                >
-                <TextView
-                    android:id="@+id/tracking_bearing_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    android:text="@string/tracking_bearing_label"
-                    android:textSize="20sp"
-                    />
-                <TextView
-                    android:id="@+id/tracking_bearing"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@android:drawable/title_bar_tall"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical"
-                android:paddingTop="8dp"
-                android:paddingLeft="8dp"
-                >
-                <TextView
-                    android:id="@+id/tracking_accuracy_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    android:text="@string/tracking_accuracy_label"
-                    android:textSize="20sp"
-                    />
-                <TextView
-                    android:id="@+id/tracking_accuracy"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="5dip"
-                    />
-            </LinearLayout>
-        </LinearLayout>
-     </LinearLayout>
+    <include layout="@layout/tracking_statistics" />
 
 </LinearLayout>
