--- a/app/src/main/res/layout/finishing_landscape.xml
+++ b/app/src/main/res/layout/finishing_landscape.xml
@@ -20,5 +20,5 @@
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="@dimen/activity_vertical_margin"
                     android:paddingBottom="@dimen/activity_vertical_margin"
-                    tools:context="com.crankworks.crankanonymous.FinishingActivity">
+                    tools:context="com.crankworks.crankanonymous.activities.FinishingActivity">
     -->
