--- a/app/src/main/res/layout/original_tracking_landscape.xml
+++ b/app/src/main/res/layout/original_tracking_landscape.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp">
 
-        <include layout="@layout/tracking_buttons" />
+        <include layout="@layout/original_tracking_buttons" />
 
     </LinearLayout>
 
-    <include layout="@layout/tracking_statistics" />
+    <include layout="@layout/original_tracking_statistics" />
 
 </LinearLayout>
