--- a/app/src/main/res/menu/main_activity_actions.xml
+++ b/app/src/main/res/menu/main_activity_actions.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Search, should appear as action button -->
+    <item android:id="@+id/action_view"
+          android:icon="@drawable/ic_action_track"
+          android:title="@string/action_view"
+          android:showAsAction="ifRoom" />
     <item android:id="@+id/action_track"
         android:icon="@drawable/ic_action_track"
         android:title="@string/action_track"
